# serde-attributes

./: Cargo.toml  README.md
serde-attribute-rename/: Cargo.toml  README.md
serde-attribute-rename-all/: Cargo.toml  README.md
serde-attribute-rename-all/src/: darling.rs  lib.rs  syn.rs
serde-attribute-rename/src/: darling.rs  lib.rs  syn.rs
src/: lib.rs
src/alias/: darling.rs  syn.rs
src/rename/: darling.rs  syn.rs
src/rename_all/: darling.rs  syn.rs
tests/integration_tests/container_attrs/: helpers.rs  mod.rs
tests/integration_tests/container_attrs/rename/: independent_both.rs  independent_only_deserialize.rs  independent_only_serialize.rs  mod.rs  normal.rs
tests/integration_tests/container_attrs/rename_all/: independent_both.rs  independent_only_deserialize.rs  independent_only_serialize.rs  mod.rs  normal.rs
