[package]
name = "serde-attribute-rename-all"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
features = [ "with-syn", "with-darling" ]

[features]
default = [ "with-syn", "with-darling" ]

with-syn = [ "syn", "serde-attribute-rename" ]
with-darling = [ "with-syn", "darling_core" ]

[dependencies]
serde-rename-rule = { version = "0.1.1", default-features = false }
serde-attribute-rename = { path = "../serde-attribute-rename", version = "=0.1.0", default-features = false, features = [ "with-syn" ], optional = true }
syn = { version = "1.0", default-features = false, features = [ "derive", "parsing" ], optional = true }
darling_core = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
darling = { version = "0.13", default-features = false }
