[package]
name = "serde-attribute-rename"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
features = [ "with-syn", "with-darling" ]

[features]
default = [ "with-syn", "with-darling" ]

with-syn = [ "syn" ]
with-darling = [ "with-syn", "darling_core" ]

[dependencies]
syn = { version = "1.0", default-features = false, features = [ "derive", "parsing" ], optional = true }
darling_core = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
darling = { version = "0.13", default-features = false }
